--- a/settings_freesurfer.json
+++ b/settings_freesurfer.json
@@ -2,7 +2,7 @@
   "public": {
     "startup_json":"http://localhost:8080/all_entries.json",
     "load_if_empty": true,
-    "clouder_cmd": "ls -la",
+    "clouder_cmd": ". /home/ndmg_launch.sh",
     "modules": [
     {
         "name": "Brainmask",
