--- a/imports/docker/Dockerfile
+++ b/imports/docker/Dockerfile
@@ -1,10 +1,23 @@
-FROM danieldent/meteor:latest
-MAINTAINER Anisha Keshavan <anishakeshavan@gmail.com>
+FROM nginx:1.9.12
 
-USER root
+MAINTAINER Michael Shang
 
-ENV MC_DIR /home/mindcontrol
-ENV LC_ALL C
+RUN apt-get update && apt-get install -y --no-install-recommends \
+        build-essential \
+        ca-certificates \
+        curl \
+        git \
+        vim \
+        supervisor \
+        && rm -rf /var/lib/apt/lists/*
+
+ENV METEOR_RELEASE 1.4.2.3
+RUN curl  https://install.meteor.com/ 2>/dev/null | sed 's/^RELEASE/#RELEASE/'| RELEASE=$METEOR_RELEASE sh
+
+RUN ln -s ~/.meteor/packages/meteor-tool/*/mt-os.linux.x86_64/dev_bundle/bin/node /usr/bin/ && \
+        ln -s ~/.meteor/packages/meteor-tool/*/mt-os.linux.x86_64/dev_bundle/bin/npm /usr/bin/ && \
+        rm /etc/nginx/conf.d/default.conf
+
 
 RUN apt-get update
 RUN apt-get install -y git python3
@@ -14,7 +27,11 @@ RUN pip install numpy wget nibabel dipy awscli==1.11.31 boto3==1.3.1 python-date
 RUN pip install ndmg==0.0.49-1
 RUN npm install http-server -g
 
-RUN apt-get install -y emacs vim
+
+
+ENV MC_DIR /home/mindcontrol
+ENV LC_ALL C
+
 
 ADD entrypoint.sh /home/entrypoint.sh
 ADD ndmg_launch.sh /home/ndmg_launch.sh
@@ -30,10 +47,13 @@ RUN mkdir -p ${MC_DIR}/mindcontrol &&\
 USER mindcontrol
 
 RUN cd ${MC_DIR}/mindcontrol &&\
-	git clone https://github.com/clowdcontrol/mindcontrol.git ${MC_DIR}/mindcontrol
+    git clone https://github.com/clowdcontrol/mindcontrol.git ${MC_DIR}/mindcontrol
 
 EXPOSE 3000
 WORKDIR ${MC_DIR}/mindcontrol
 
 ENTRYPOINT ["/home/entrypoint.sh"]
+
+
+ENV PORT 3000
 
