--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.46",
+    "bcrypt": "^2.0.1",
     "meteor-node-stubs": "~0.2.0"
   }
 }
